RecentFileList Corrections and Partial Blog exercise