@@ -1,38 +1,34 @@
 package Clase3OPP;
 
-import java.util.ArrayList;
+import java.util.LinkedList;
 import java.io.File;
 
 public class RecentFileList {
 	
-		private ArrayList<File> FileList = new ArrayList<File>();
+		private LinkedList<File> fileList = new LinkedList<File>();
 		private int maxSizeArray;
 		
 		public RecentFileList(int maxSizeArrayTest){
 			maxSizeArray= maxSizeArrayTest;
+			fileList = new LinkedList<File>();
 		}
 
-		public ArrayList<File> getList(){
-			return FileList;
+		public LinkedList<File> getList(){
+			return fileList;
 		}
 		
 		public void fileOpen(File file){
-			if(FileList.size()<maxSizeArray)
-			{
-				if(!FileList.contains(file)){				
-					FileList.add(FileList.size(),file);
-				}else{
-					FileList.remove(file);
-					FileList.add(0,file);
-				}
-			}else{
-				if(!FileList.contains(file)){
-					FileList.remove(0);
-					FileList.add(0,file);
-				}else{
-					FileList.remove(file);
-					FileList.add(0,file);
-				}
-			}
+			if(fileList.size()>=maxSizeArray)
+				fileList.removeLast();
+			addFile(file);
+		}
+		
+		public File getFirstElement(){
+			return fileList.getFirst();
+		}
+		public void addFile(File file){
+			if(fileList.contains(file))
+				fileList.remove(file);
+			fileList.addFirst(file);
 		}
 }
